# oar3-plugins

./: README.md  flake.nix  pyproject.toml  setup.py
scripts/ci/docker/: Dockerfile  build-venv.sh
src/: custom_jobs_sorting.py  custom_scheduling.py  extra_metasched.py
tests/: __init__.py  conftest.py  test_custom_jobs_sorting.py  test_custom_scheduling.py  test_db_extra_metasched.py
