[tool.poetry]
name = "oar-plugins"
version = "0.1.0"
description = ""
authors = ["Adrien Faure <adrien.faure@protonmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7, <4"
oar = { git = "https://github.com/oar-team/oar3", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
black = "22.3.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."oar.extra_metasched_func"]
default = "src.extra_metasched:extra_metasched_default"
logger = "src.extra_metasched:extra_metasched_logger"
# The function used in oar automatic tests
foo = "src.extra_metasched:extra_metasched_foo"

[tool.poetry.plugins."oar.assign_func"]
default = "src.custom_scheduling:assign_default"
start_every_minute = "src.custom_scheduling:assign_start_every_minute"

[tool.poetry.plugins."oar.find_func"]
default = "src.custom_scheduling:find_default"
find_even_or_odd = "src.custom_scheduling:find_even_or_odd"

[tool.poetry.plugins."oar.jobs_sorting_func"]
simple_priority = "src.custom_jobs_sorting:jobs_sorting_simple_priority"
rev_submittime = "src.custom_jobs_sorting:jobs_sorting_reverse_waiting_time"
